--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
       <TITLE>Alicia Velandia</TITLE>
    </HEAD>
    <BODY>
-      <P><b>Nombre: </b>Alicia del Rosario Velandia Martínez
-      <P><b>Programa: </b>Ingeniería de Sistemas
-      <P><b>Fecha de creacion: </b>7 de septiembre de 2020
-      <P><b>Correo: </b>alisvelandia@gmail.com
-      <P><b>Celular: </b>3118986294
+      <P><b>Nombre: </b>Alicia del Rosario Velandia Martínez</P>
+      <P><b>Programa: </b>Ingeniería de Sistemas</P>
+      <P><b>Fecha de creacion: </b>7 de septiembre de 2020</P>
+      <P><b>Correo: </b>alisvelandia@gmail.com</P>
+      <P><b>Celular: </b>3118986294</P>
+      <a href="planning.html">Planning</a>
    </BODY>
 </HTML>
