--- a/recursos.html
+++ b/recursos.html
@@ -1,10 +1,10 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <link href="estilos.css" rel="stylesheet" type="text/css">
     <meta name="viewport" content="width=device-width; initial-scale=1.0">
-    <title>Inicio</title>
+    <title>Recursos</title>
 </head>
 
 <body>
@@ -17,7 +17,7 @@
                         GIT & GITHUB
                     </div>
                     <div class="title">
-                        I N I C I O
+                        R E C U R S O S
                     </div>
 
                 </td>
@@ -53,60 +53,18 @@
         </ul>
     </nav>
 
-
     <div class="card">
         <div class="subtitle">
-            ¿QUE ES GIT?
-        </div>
-        <p class="texto">
-            Es un sistema de control de versiones, es distribuido, es decir que múltiples personas pueden trabajar en equipo, es open source y también se adapta a todo tipo de proyectos desde pequeños hasta grandes, además, se pueden fusionar archivos, guarda una línea de tiempo a lo largo de todo el proyecto.
-        </p>
-
-        
-        <br />
-        <br />
-
-        <div class="subtitle">
-            ¿QUE ES GITHUB?
-        </div>
-        <p class="texto">
-            Es una plataforma de desarrollo colaborativo, o también llamada la red social de los desarrolladores donde se alojan los repositorios, el código se almacena de forma pública pero se puede hacer privado con una cuenta de pago.
-        </p>
-
-        <br />
-        <br />
-
-        <div class="subtitle">
-            OBJETIVO GENERAL
-        </div>
-        <p class="texto">
-            Permitir a varias personas contribuir simultáneamente sobre un mismo proyecto, además guardar el Introduccionl de cambios sobre el código de un proyecto; para poder desarrollar sitios web en formato HTML5 y CSS3.
-        </p>
-
-        <br />
-        <br />
-
-        <div class="subtitle">
-            OBJETIVOS ESPECIFICOS
+            Resursos:
         </div>
         <ul>
-            <li>Permitir hacer commits.</li>
-            <li>Ver los cambios a los que se les ha realizado un commit.</li>
-            <li>Poder listar los commits.</li>
-            <li>Ver la diferencia entre commits.</li>
-            <li>Crear un repositorio remoto en el que varios desarrolladores pueden colaborar.</li>
-            <li>Identificar tipos de repositorios y comandos básicos de Git</li>
-            <li>Utilizar las herramientas de Git en la resolución de conflictos</li>
-            <li>Distinguir las funcionalidades de GitHub y Git</li>
+            <li><a href="recursos1.html">Introduccion</a></li>
+            <li><a href="recursos2.html">Conceptos</a></li>
         </ul>
-        
-        <br />
-        <br />
 
         <aside>
             <blockquote class="twitter-tweet"><p lang="es" dir="ltr"><a href="https://twitter.com/hashtag/ComunicadoOficial?src=hash&amp;ref_src=twsrc%5Etfw">#ComunicadoOficial</a> Procuraduría revocó sanción impuesta al rector de la UNAD, Jaime Alberto Leal Afanador (<a href="https://twitter.com/JaimeLeal_?ref_src=twsrc%5Etfw">@JaimeLeal_</a> ) y lo absolvió de los cargos investigados.<br><br>Leer más👉🏼 <a href="https://t.co/RvfdJxOH3I">https://t.co/RvfdJxOH3I</a> <a href="https://t.co/cse66bpjtb">pic.twitter.com/cse66bpjtb</a></p>&mdash; Universidad UNAD (@UniversidadUNAD) <a href="https://twitter.com/UniversidadUNAD/status/1320010854277042176?ref_src=twsrc%5Etfw">October 24, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </aside>
     </div>
-
 </body>
 </html>
