--- a/autoevaluacion2.html
+++ b/autoevaluacion2.html
@@ -56,17 +56,10 @@
 
     <div class="card">
         <div class="subtitle">
-            Autoevaluacion:
+            Test - Git & Github
         </div>
-        <ul>
-            <li><a href="autoevaluacion1.html">Sopa de Letras</a></li>
-            <li><a href="autoevaluacion2.html">Test</a></li>
-            <li><a href="autoevaluacion3.html">Evaluacion sitio</a></li>
-        </ul>
 
-        <aside>
-            <blockquote class="twitter-tweet"><p lang="es" dir="ltr"><a href="https://twitter.com/hashtag/ComunicadoOficial?src=hash&amp;ref_src=twsrc%5Etfw">#ComunicadoOficial</a> Procuraduría revocó sanción impuesta al rector de la UNAD, Jaime Alberto Leal Afanador (<a href="https://twitter.com/JaimeLeal_?ref_src=twsrc%5Etfw">@JaimeLeal_</a> ) y lo absolvió de los cargos investigados.<br><br>Leer más👉🏼 <a href="https://t.co/RvfdJxOH3I">https://t.co/RvfdJxOH3I</a> <a href="https://t.co/cse66bpjtb">pic.twitter.com/cse66bpjtb</a></p>&mdash; Universidad UNAD (@UniversidadUNAD) <a href="https://twitter.com/UniversidadUNAD/status/1320010854277042176?ref_src=twsrc%5Etfw">October 24, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-        </aside>
+        <iframe width="795" height="690" frameborder="0" src="https://es.educaplay.com/juego/7813912-git_github_test.html"></iframe>
     </div>
 </body>
 </html>
