--- a/autoevaluacion3.html
+++ b/autoevaluacion3.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link href="estilos.css" rel="stylesheet" type="text/css">
     <meta name="viewport" content="width=device-width; initial-scale=1.0">
+    <meta name="autor" content="Alicia Velandia">
     <title>Autoevaluacion</title>
 </head>
 
@@ -56,17 +57,10 @@
 
     <div class="card">
         <div class="subtitle">
-            Autoevaluacion:
+            Matriz de evaluacion Sitio web
         </div>
-        <ul>
-            <li><a href="autoevaluacion1.html">Sopa de Letras</a></li>
-            <li><a href="autoevaluacion2.html">Test</a></li>
-            <li><a href="autoevaluacion3.html">Evaluacion sitio</a></li>
-        </ul>
-
-        <aside>
-            <blockquote class="twitter-tweet"><p lang="es" dir="ltr"><a href="https://twitter.com/hashtag/ComunicadoOficial?src=hash&amp;ref_src=twsrc%5Etfw">#ComunicadoOficial</a> Procuraduría revocó sanción impuesta al rector de la UNAD, Jaime Alberto Leal Afanador (<a href="https://twitter.com/JaimeLeal_?ref_src=twsrc%5Etfw">@JaimeLeal_</a> ) y lo absolvió de los cargos investigados.<br><br>Leer más👉🏼 <a href="https://t.co/RvfdJxOH3I">https://t.co/RvfdJxOH3I</a> <a href="https://t.co/cse66bpjtb">pic.twitter.com/cse66bpjtb</a></p>&mdash; Universidad UNAD (@UniversidadUNAD) <a href="https://twitter.com/UniversidadUNAD/status/1320010854277042176?ref_src=twsrc%5Etfw">October 24, 2020</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-        </aside>
+        <br/>
+        <embed src="Matriz-EvalSite.pdf" type="application/pdf" width="100%" height="600px" />
     </div>
 </body>
 </html>
