--- a/recursos2.html
+++ b/recursos2.html
@@ -1,5 +1,5 @@
 ﻿<!doctype html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <link href="estilos.css" rel="stylesheet" type="text/css">
@@ -45,8 +45,9 @@
             <li>
                 <a href="autoevaluacion.html" target="_self">Autoevaluacion</a>
                 <ul>
-                    <li><a href="autoevaluacion.html">Autoevaluacion 1</a></li>
-                    <li><a href="autoevaluacion.html">Autoevaluacion 2</a></li>
+                    <li><a href="autoevaluacion1.html">Autoevaluacion 1</a></li>
+                    <li><a href="autoevaluacion2.html">Autoevaluacion 2</a></li>
+                    <li><a href="autoevaluacion3.html">Evaluacion Sitio.</a></li>
                 </ul>
             </li>
             <li><a href="autor.html" target="_self">Autor</a></li>
